--- a/package.json
+++ b/package.json
@@ -8,16 +8,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ckpack/vue-color": "^1.1.9",
     "@icon-park/vue-next": "^1.3.6",
     "axios": "^0.26.0",
     "axios-retry": "^3.2.4",
+    "javascript-color-gradient": "^2.3.4",
     "normalize.css": "^8.0.1",
     "qs": "^6.10.3",
     "vant": "3",
     "vue": "^3.2.31",
     "vue-clipboard3": "^2.0.0",
     "vue-meta": "^3.0.0-alpha.9",
-    "vue-router": "^4.0.13"
+    "vue-router": "^4.0.13",
+    "vuex": "^4.0.2",
+    "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.2.4",
@@ -26,8 +30,8 @@
     "sass": "^1.49.9",
     "unplugin-vue-components": "^0.18.0",
     "vite": "^2.8.6",
+    "vite-plugin-compression": "^0.5.1",
     "vite-plugin-mock": "^2.9.6",
-    "vite-plugin-style-import": "^1.4.1",
-    "vite-plugin-compression": "^0.5.1"
+    "vite-plugin-style-import": "^1.4.1"
   }
 }
